# Operating_systems

./: Best_fit.cpp  Best_fit_new  Best_fit_new.cpp  CMakeLists.txt  Disk_Scan.cpp  FIFO  FIFO.cpp  FIFO_PAGE.cpp  First_Fit  LRU  LRU.cpp  Mem_Process.txt  Priority.cpp  Round_Robin.cpp  Shortest_job_first.cpp  Trials.cpp  best  fifo  first.txt  lru.txt  main.cpp  optimal.cpp  page.txt  priority  process_1.txt  process_2.txt  round  short  sjf  trials
